--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,32 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a2b467">  <td>19/01/09 21:26:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginPageTC@1e178745]">Logintestcase</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="a2b467">  <td>19/01/09 21:26:55</td>   <td>10269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginPageTC@1e178745]">Logintestcase</td> 
-  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="e6f7ac">  <td>19/01/09 21:26:37</td>   <td>-7892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginPageTC@1e178745]">&gt;&gt;start</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="e6f7ac">  <td>19/01/09 21:26:49</td>   <td>4473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginPageTC@1e178745]">&gt;&gt;start</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="e6f7ac">  <td>19/01/09 21:26:49</td>   <td>3941</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginPageTC@1e178745]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
-<tr bgcolor="e6f7ac">  <td>19/01/09 21:27:05</td>   <td>19782</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginPageTC@1e178745]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1190820921</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>19/03/10 21:47:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginTC@675d3402]">Logintestcase</td> 
+  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>19/03/10 21:48:19</td>   <td>29339</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">Logintestcase</td> 
+  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="85796e">  <td>19/03/10 21:49:06</td>   <td>76566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginTC@6f7fd0e6]">Logintestcase</td> 
+  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:47:37</td>   <td>-12524</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.LoginTC@675d3402]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:08</td>   <td>17592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:31</td>   <td>40719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:41</td>   <td>51080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:47:32</td>   <td>-17453</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginTC@675d3402]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:04</td>   <td>14171</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:39</td>   <td>49195</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:03</td>   <td>13434</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginTC@675d3402]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:38</td>   <td>48339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="9d9cb5">  <td>19/03/10 21:49:30</td>   <td>100419</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="a097cc">  <td>19/03/10 21:48:38</td>   <td>48239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyaccountTC.verifyMyAccountpage()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">verifyMyAccountpage</td> 
+  <td>main@1333592072</td>   <td></td> </tr>
 </table>
