--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,6 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>baseclass.BaseClass.initiatebrowser</td></tr>
+<tr><td>baseclass.BaseClass.teardown</td></tr>
+<tr><td>baseclass.BaseClass.signout</td></tr>
+<tr><td>baseclass.BaseClass.start</td></tr>
 </table>
