--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -4,29 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCase.LoginTC</td>
+<td>testCase.logintestcase.InvalidLoginTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>Logintestcase</td>
+<td>invalidLoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>start</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>initiatebrowser</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -34,11 +26,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>testCase.MyaccountTC</td>
+<td>testCase.myaccounttestcase.MyaccountTC</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -48,23 +36,11 @@
 <td>verifyMyAccountpage</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>&nbsp;</td>
-<td>Logintestcase</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>start</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>initiatebrowser</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -72,7 +48,25 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
+<td>testCase.logintestcase.ValidLoginTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
-<td>teardown</td>
+<td>validLoginTest</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
