--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,32 +1,30 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:47:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginTC@675d3402]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:47:37</td>   <td>4929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.LoginTC@675d3402]">&gt;&gt;initiatebrowser</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/10 21:47:50</td>   <td>17453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginTC@675d3402]">Logintestcase</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:03</td>   <td>30887</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginTC@675d3402]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:04</td>   <td>31624</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:08</td>   <td>35045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;initiatebrowser</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/10 21:48:19</td>   <td>46792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">Logintestcase</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:31</td>   <td>58172</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&gt;&gt;initiatebrowser</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/10 21:48:38</td>   <td>65692</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyaccountTC.verifyMyAccountpage()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">verifyMyAccountpage</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:38</td>   <td>65792</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.MyaccountTC@55f3ddb1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:39</td>   <td>66648</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&gt;&gt;start</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:48:41</td>   <td>68533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&gt;&gt;initiatebrowser</td> 
-<td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/10 21:49:06</td>   <td>94019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTC.Logintestcase(java.lang.String, java.lang.String)[pri:0, instance:testCase.LoginTC@6f7fd0e6]">Logintestcase</td> 
-  <td>main@1333592072</td>   <td></td> </tr>
-<tr bgcolor="9d9cb5">  <td>19/03/10 21:49:30</td>   <td>117872</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.LoginTC@6f7fd0e6]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1333592072</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:08</td>   <td>0</td> <td title="&gt;&gt;BaseClass.start(java.lang.String)[pri:0, instance:testCase.logintestcase.ValidLoginTest@5c3bd550]">&gt;&gt;start</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:13</td>   <td>4511</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.logintestcase.InvalidLoginTest@20e2cbe0]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/03/14 18:17:26</td>   <td>17767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLoginTest.invalidLoginTest(java.lang.String, java.lang.String)[pri:0, instance:testCase.logintestcase.InvalidLoginTest@20e2cbe0]">invalidLoginTest</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="f6e879">  <td>19/03/14 18:17:36</td>   <td>27678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLoginTest.invalidLoginTest(java.lang.String, java.lang.String)[pri:0, instance:testCase.logintestcase.InvalidLoginTest@20e2cbe0]">invalidLoginTest</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:47</td>   <td>39002</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.signout()[pri:0, instance:testCase.logintestcase.InvalidLoginTest@20e2cbe0]">&lt;&lt;signout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:47</td>   <td>39174</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.logintestcase.ValidLoginTest@3e6fa38a]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>19/03/14 18:17:54</td>   <td>45528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLoginTest.validLoginTest(java.lang.String, java.lang.String)[pri:0, instance:testCase.logintestcase.ValidLoginTest@3e6fa38a]">validLoginTest</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:54</td>   <td>45538</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.signout()[pri:0, instance:testCase.logintestcase.ValidLoginTest@3e6fa38a]">&lt;&lt;signout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:17:54</td>   <td>45575</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.initiatebrowser()[pri:0, instance:testCase.logintestcase.ValidLoginTest@5c3bd550]">&gt;&gt;initiatebrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="c682b1">  <td>19/03/14 18:18:06</td>   <td>57619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLoginTest.validLoginTest(java.lang.String, java.lang.String)[pri:0, instance:testCase.logintestcase.ValidLoginTest@5c3bd550]">validLoginTest</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>19/03/14 18:18:06</td>   <td>57621</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyaccountTC.verifyMyAccountpage()[pri:0, instance:testCase.myaccounttestcase.MyaccountTC@91161c7]">verifyMyAccountpage</td> 
+  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:18:06</td>   <td>57667</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.signout()[pri:0, instance:testCase.logintestcase.ValidLoginTest@5c3bd550]">&lt;&lt;signout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>19/03/14 18:18:06</td>   <td>57698</td> <td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCase.logintestcase.ValidLoginTest@5c3bd550]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1476394199</td>   <td></td> </tr>
 </table>
