--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,21 +31,21 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Invalid Login Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">34.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr class="stripe"><td style="text-align:left;padding-right:2em">Valid Login Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">6.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
-<tr><td style="text-align:left;padding-right:2em">Verify MyAccountPage Test</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">12.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Invalid Login Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">31.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr class="stripe"><td style="text-align:left;padding-right:2em">Valid Login Test</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi">0</td><td class="numi">15.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Verify MyAccountPage Test</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi">0</td><td class="numi">14.4 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 <tr class="total"><td>Total</td>
-<td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">3</td><td class="numi">53.2 seconds</td><td colspan="2">&nbsp;</td></tr>
+<td class="numi">5</td><td class="numi">5</td><td class="numi">0</td><td class="numi">0</td><td class="numi">62.2 seconds</td><td colspan="2">&nbsp;</td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">Invalid Login Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="2">testCase.logintestcase.InvalidLoginTest</td><td><a href="#m1"><b>invalidLoginTest</b>  </a></td><td class="numi">2</td><td>1552558646435</td><td class="numi">21220</td></tr><tr class="passedodd"><td><a href="#m2"><b>invalidLoginTest</b>  </a></td><td class="numi">2</td><td>1552558646435</td><td class="numi">21220</td></tr>
-<tr><th colspan="4">Valid Login Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">testCase.logintestcase.ValidLoginTest</td><td><a href="#m3"><b>validLoginTest</b>  </a></td><td class="numi">1</td><td>1552558674196</td><td class="numi">1</td></tr>
-<tr><th colspan="4">Verify MyAccountPage Test &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">testCase.logintestcase.ValidLoginTest</td><td><a href="#m4"><b>validLoginTest</b>  </a></td><td class="numi">1</td><td>1552558686287</td><td class="numi">1</td></tr>
-<tr class="failedeven"><td rowspan="1">testCase.myaccounttestcase.MyaccountTC</td><td><a href="#m5"><b>verifyMyAccountpage</b>  </a></td><td class="numi">1</td><td>1552558686289</td><td class="numi">46</td></tr>
+<tr class="passedodd"><td rowspan="2">testCase.logintestcase.InvalidLoginTest</td><td><a href="#m1"><b>invalidLoginTest</b>  </a></td><td class="numi">2</td><td>1553048590437</td><td class="numi">18984</td></tr><tr class="passedodd"><td><a href="#m2"><b>invalidLoginTest</b>  </a></td><td class="numi">2</td><td>1553048590437</td><td class="numi">18984</td></tr>
+<tr><th colspan="4">Valid Login Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">testCase.logintestcase.ValidLoginTest</td><td><a href="#m3"><b>validLoginTest</b>  </a></td><td class="numi">1</td><td>1553048617522</td><td class="numi">4452</td></tr>
+<tr><th colspan="4">Verify MyAccountPage Test &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="1">testCase.logintestcase.ValidLoginTest</td><td><a href="#m4"><b>validLoginTest</b>  </a></td><td class="numi">1</td><td>1553048631141</td><td class="numi">4959</td></tr>
+<tr class="passedeven"><td rowspan="1">testCase.myaccounttestcase.MyaccountTC</td><td><a href="#m5"><b>verifyMyAccountpage</b>  </a></td><td class="numi">1</td><td>1553048636102</td><td class="numi">361</td></tr>
 </table>
 <h1>Invalid Login Test</h1>
 <h2 id="m1">testCase.logintestcase.InvalidLoginTest:invalidLoginTest</h2>
@@ -71,24 +71,10 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <tr class="param stripe"><td>santhi.asusvivobook@gmail.com</td>
 <td>automation123</td>
 </tr>
-<tr><td style="padding-left:3em" colspan="2">
-<p>null</p>
-testCase.logintestcase.ValidLoginTest.validLoginTest(ValidLoginTest.java:14)
-<br/>25 lines not shown
-</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h1>Verify MyAccountPage Test</h1>
 <h2 id="m4">testCase.myaccounttestcase.MyaccountTC:verifyMyAccountpage</h2>
-<div style="padding-left:3em">
-<p>null</p>
-junit.framework.Assert.fail(Assert.java:48)
-<br/>at junit.framework.Assert.assertTrue(Assert.java:20)
-<br/>at junit.framework.Assert.assertTrue(Assert.java:27)
-<br/>at actionscript.MyAccountPageScript.checkMyAccountheaderandnavigation(MyAccountPageScript.java:16)
-<br/>at testCase.myaccounttestcase.MyaccountTC.verifyMyAccountpage(MyaccountTC.java:13)
-<br/>25 lines not shown
-</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m5">testCase.logintestcase.ValidLoginTest:validLoginTest</h2>
 <table cellspacing="0" cellpadding="0" class="result">
@@ -96,11 +82,6 @@ junit.framework.Assert.fail(Assert.java:48)
 <tr class="param stripe"><td>santhi.asusvivobook@gmail.com</td>
 <td>automation123</td>
 </tr>
-<tr><td style="padding-left:3em" colspan="2">
-<p>null</p>
-testCase.logintestcase.ValidLoginTest.validLoginTest(ValidLoginTest.java:14)
-<br/>25 lines not shown
-</td></tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
