--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -20,26 +20,26 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-failed'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Valid Login Test (0/1/0)</td><td valign='top' align='right'>
-  <a href='Valid Login Test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Verify MyAccountPage Test (0/2/0)</td><td valign='top' align='right'>
-  <a href='Verify MyAccountPage Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Invalid Login Test (2/0/0)</td><td valign='top' align='right'>
+  <a href='Invalid Login Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Login Test (2/0/0)</td><td valign='top' align='right'>
-  <a href='Invalid Login Test.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Valid Login Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='Valid Login Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Verify MyAccountPage Test (2/0/0)</td><td valign='top' align='right'>
+  <a href='Verify MyAccountPage Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
